ci-cd/k8s/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: workstation-rack-application
spec:
  selector:
    app.kubernetes.io/name: WorkStationRackPool
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
