ci-cd/k8s/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  ingressClassName: workstation-rack-application
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workstation-rack-application
                port:
                  number: 8080
